# Apziva-Project-Term-Deposit-Marketing

./: Makefile  README.md  pyproject.toml
models/: xgboost_model.pkl  xgboost_threshold.pkl
notebooks/: term_deposit_marketing.ipynb
term_deposit_marketing/: eda_plotting.py  load_data.py  preprocessing.py
term_deposit_marketing/model/: demographic.py  train_evaluate.py  xgboost_tune.py
