[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "term_deposit_marketing"
version = "0.0.1"
description = "This project aims to predict whether a customer will subscribe to a term deposti based on data from a European bank's call center marketing campaigns. Using various classification models, the goal is the achieve at least 81% F1-Score through 5-fold cross validation while maintaining interpretability. The project also focuses on identifying key customer segments and features that influence purchasing decisions, helping to improve targeting strategies and campaign sucess rates."
authors = [
  { name = "Soo Ihk Ro" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.2"


[tool.ruff]
line-length = 99
src = ["term_deposit_marketing"]
include = ["pyproject.toml", "term_deposit_marketing/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["term_deposit_marketing"]
force-sort-within-sections = true

